# aoc-2022

./: .editorconfig  .flake8  .mypy.ini  .pre-commit-config.yaml  README.md  pyproject.toml
aoc/: day.py
aoc/alg/: __init__.py  dijkstra.py
aoc/ds/: graphs.py  grids.py  utils.py
stubs/num2words/: __init__.pyi
tests/alg/: test_dijkstra.py
tests/ds/: test_graph.py  test_grid.py
