[tool.poetry]
name = "aoc"
version = "0.1"
description = "Advent of Code"
authors = ["Tom Evans"]

[tool.poetry.dependencies]
python = "^3.10"

requests = "*"
num2words = "*"
pytest = "^6"
pytest-xdist = "*"

[tool.poetry.scripts]
day = "aoc.day:main"
mkday = "aoc.day:make_my_day"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.black]
line-length = 99
target-version = ["py310"]

[tool.isort]
known_first_party = "aoc"
default_section = "THIRDPARTY"
sections = "STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
profile = "black"
line_length = 99
